--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -2,5 +2,7 @@
 @import "mixins";
 @import "globals";
 @import "header";
+@import "footer";
 @import "animations";
 @import "hero";
+@import "article";
