--- a/documentsite/templates/home/home_page.html
+++ b/documentsite/templates/home/home_page.html
@@ -1,11 +1,27 @@
 {% extends 'index.html' %}
 
 {% block content %}
+  <section class="articles">
 
-   {% for item in document %}
-    <tr >
-        <h1>{{item.title}}</h1>
-        <p>{{item.description}}</p>
-    </tr>
+  <div class="article__content container container--pall">
+
+    <h2>Latest Articles</h2>
+
+    <div class="article__grid">
+
+ {% for item in document %}
+         <a href="#" class="article__item">
+        <div class="article__image" style="background-image: url('{{ item.image.url }}')"></div>
+        <div class="article__text">
+          <div class="article__author">By Claire Robinson</div>
+          <div class="article__title">{{item.title}}</div>
+          <div class="article__description">{{item.description}}</div>
+        </div>
+      </a>
+
 {% endfor %}
+    </div>
+  </div>
+  </section>
+
 {% endblock %}
