--- a/static/css/_globals.scss
+++ b/static/css/_globals.scss
@@ -17,7 +17,7 @@ body {
   font-weight: 300;
   color: $grayishBlue;
   line-height: 1.3;
-  min-height: 350vh;
+  //min-height: 350vh;
   overflow-x: hidden;
 
   @include breakpoint-up(large) {
