--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,14 +17,15 @@ body {
   font-weight: 300;
   color: #9698a6;
   line-height: 1.3;
-  min-height: 350vh;
   overflow-x: hidden;
 }
+
 @media (min-width: 64em) {
   body {
     font-size: 1.125rem;
   }
 }
+
 body.noscroll {
   overflow: hidden;
 }
@@ -42,6 +43,7 @@ h1 {
   font-size: 2.31rem;
   margin-bottom: 1.5rem;
 }
+
 @media (min-width: 64em) {
   h1 {
     font-size: 3.25rem;
@@ -52,6 +54,7 @@ h2 {
   font-size: 1.875rem;
   margin-bottom: 1.5625rem;
 }
+
 @media (min-width: 64em) {
   h2 {
     font-size: 2.25rem;
@@ -74,51 +77,62 @@ a:hover {
   max-width: 69.375rem;
   margin: 0 auto;
 }
+
 .container--pall {
   padding-top: 4.375rem;
   padding-right: 1.5rem;
   padding-bottom: 4.375rem;
   padding-left: 1.5rem;
 }
+
 @media (min-width: 64em) {
   .container--pall {
     padding-top: 6rem;
     padding-bottom: 6rem;
   }
 }
+
 .container--py {
   padding-top: 4.375rem;
   padding-bottom: 4.375rem;
 }
+
 @media (min-width: 64em) {
   .container--py {
     padding-top: 6rem;
     padding-bottom: 6rem;
   }
 }
+
 .container--px {
   padding-right: 1.5rem;
   padding-left: 1.5rem;
 }
+
 .container--pt {
   padding-top: 4.375rem;
 }
+
 @media (min-width: 64em) {
   .container--pt {
     padding-top: 6rem;
   }
 }
+
 .container--pr {
   padding-right: 1.5rem;
 }
+
 .container--pb {
   padding-bottom: 4.375rem;
 }
+
 @media (min-width: 64em) {
   .container--pb {
     padding-bottom: 6rem;
   }
 }
+
 .container--pl {
   padding-left: 1.5rem;
 }
@@ -126,12 +140,15 @@ a:hover {
 .flex {
   display: flex;
 }
+
 .flex-jc-sb {
   justify-content: space-between;
 }
+
 .flex-jc-c {
   justify-content: center;
 }
+
 .flex-ai-c {
   align-items: center;
 }
@@ -151,6 +168,7 @@ button,
   transition: opacity 300ms ease-in-out;
   overflow: hidden;
 }
+
 button::before,
 .button::before {
   content: "";
@@ -163,6 +181,7 @@ button::before,
   opacity: 0;
   transition: opacity 150ms ease-in-out;
 }
+
 button:hover::before,
 .button:hover::before {
   opacity: 1;
@@ -183,15 +202,19 @@ button:hover::before,
 .header.open .overlay {
   display: block;
 }
+
 .header.open .header__toggle > span:first-child {
   transform: rotate(45deg);
 }
+
 .header.open .header__toggle > span:nth-child(2) {
   opacity: 0;
 }
+
 .header.open .header__toggle > span:last-child {
   transform: rotate(-45deg);
 }
+
 .header .overlay {
   display: none;
   position: fixed;
@@ -201,15 +224,18 @@ button:hover::before,
   left: 0;
   background-image: linear-gradient(#2d314d, transparent);
 }
+
 .header nav {
   position: relative;
   background-color: white;
   padding: 1.0625rem 1.5rem;
 }
+
 .header__logo img {
   width: 8.8125rem;
   height: 1.375rem;
 }
+
 .header__toggle > span {
   display: block;
   width: 26px;
@@ -218,18 +244,22 @@ button:hover::before,
   transition: all 300ms ease-in-out;
   transform-origin: 6px 2px;
 }
+
 .header__toggle > span:not(:last-child) {
   margin-bottom: 3px;
 }
+
 .header__links a {
   font-size: 0.875rem;
   color: #9698a6;
   position: relative;
   transition: color 300ms ease-in-out;
 }
+
 .header__links a:not(:last-child) {
   margin-right: 32px;
 }
+
 .header__links a::before {
   content: "";
   display: block;
@@ -242,12 +272,15 @@ button:hover::before,
   opacity: 0;
   transition: opacity 300ms ease-in-out;
 }
+
 .header__links a:hover {
   color: #2d314d;
 }
+
 .header__links a:hover::before {
   opacity: 1;
 }
+
 .header__menu {
   background-color: white;
   padding: 1.625rem;
@@ -258,17 +291,156 @@ button:hover::before,
   left: 50%;
   transform: translateX(-50%);
 }
+
 .header__menu a {
   display: block;
   text-align: center;
   color: #2d314d;
   padding: 0.625rem;
 }
+
 .header__cta {
   transition: opacity 300ms ease-in-out;
 }
+
 .header__cta:hover {
   opacity: 0.75;
+}
+
+.footer {
+  background-color: #2d314d;
+  color: white;
+  padding: 2.5rem;
+  text-align: center;
+}
+
+@media (min-width: 64em) {
+  .footer .container {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 3fr;
+    grid-template-rows: 1fr auto;
+    grid-template-areas: "logo links1 links2 cta" "social links1 links2 copyright";
+    gap: 1rem;
+    justify-items: start;
+  }
+}
+
+.footer a {
+  color: white;
+}
+
+.footer__logo {
+  display: inline-block;
+}
+
+@media (max-width: 63.9375em) {
+  .footer__logo {
+    margin-bottom: 1.875rem;
+  }
+}
+
+@media (min-width: 64em) {
+  .footer__logo {
+    grid-area: logo;
+  }
+}
+
+@media (max-width: 63.9375em) {
+  .footer__social {
+    margin-bottom: 1.875rem;
+  }
+}
+
+@media (min-width: 64em) {
+  .footer__social {
+    grid-area: social;
+    align-self: end;
+  }
+}
+
+.footer__social a {
+  display: inline-block;
+  height: 1.25rem;
+}
+
+.footer__social a svg path {
+  transition: fill 150ms ease-in-out;
+}
+
+.footer__social a:hover svg path {
+  fill: #31d35c;
+}
+
+.footer__social a:not(:last-child) {
+  margin-right: 1rem;
+}
+
+.footer__links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 0.9375rem;
+}
+
+@media (min-width: 64em) {
+  .footer__links {
+    justify-content: space-between;
+    align-items: start;
+  }
+}
+
+@media (min-width: 64em) {
+  .footer__links.col1 {
+    grid-area: links1;
+  }
+}
+
+@media (max-width: 63.9375em) {
+  .footer__links.col2 {
+    margin-bottom: 1.875rem;
+  }
+}
+
+@media (min-width: 64em) {
+  .footer__links.col2 {
+    grid-area: links2;
+  }
+}
+
+.footer__links a {
+  line-height: 2.25;
+  transition: color 150ms ease-in-out;
+}
+
+.footer__links a:hover {
+  color: #31d35c;
+}
+
+@media (min-width: 64em) {
+  .footer__cta {
+    grid-area: cta;
+    text-align: right;
+    justify-self: end;
+  }
+}
+
+@media (max-width: 63.9375em) {
+  .footer__cta a.button {
+    margin-bottom: 1.875rem;
+  }
+}
+
+.footer__copyright {
+  font-size: 0.8125rem;
+  color: #9698a6;
+}
+
+@media (min-width: 64em) {
+  .footer__copyright {
+    grid-area: copyright;
+    align-self: end;
+    justify-self: end;
+  }
 }
 
 @keyframes fade-in {
@@ -285,6 +457,7 @@ button:hover::before,
     opacity: 1;
   }
 }
+
 .fade-in {
   animation: fade-in 300ms ease-in-out forwards;
 }
@@ -306,6 +479,7 @@ button:hover::before,
     opacity: 0;
   }
 }
+
 .fade-out {
   animation: fade-out 300ms ease-in-out forwards;
 }
@@ -313,74 +487,42 @@ button:hover::before,
 .hero {
   background-color: #fafafa;
 }
+
 @media (min-width: 64em) {
   .hero .container {
     display: flex;
     align-items: center;
   }
 }
+
 .hero__image {
   position: relative;
-  background-image: url("/images/bg-intro-mobile.svg");
+  background-image: url("/static/images/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   min-height: 17.5rem;
 }
+
 @media (min-width: 40em) {
   .hero__image {
     min-height: 25rem;
     background-position: center 70%;
   }
 }
+
 @media (min-width: 64em) {
   .hero__image {
     flex: 3;
     order: 2;
     height: 41rem;
-    background-image: none;
   }
 }
-@media (min-width: 64em) {
-  .hero__image::before {
-    content: "";
-    position: absolute;
-    height: 100%;
-    background-image: url("/images/bg-intro-desktop.svg");
-    background-repeat: no-repeat;
-    background-position: center bottom;
-    width: 150%;
-    background-size: 122%;
-    background-position: 0% 83%;
-  }
-}
-.hero__image::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-image: url("/images/image-mockups.png");
-  background-size: 93%;
-  background-repeat: no-repeat;
-  background-position: center bottom;
-}
-@media (min-width: 40em) {
-  .hero__image::after {
-    background-size: 52%;
-  }
-}
-@media (min-width: 64em) {
-  .hero__image::after {
-    width: 120%;
-    height: 122%;
-    background-size: 94%;
-    background-position: center 150%;
-    left: 22%;
-  }
-}
+
 .hero__text {
   text-align: center;
 }
+
 @media (min-width: 64em) {
   .hero__text {
     flex: 2;
@@ -389,4 +531,70 @@ button:hover::before,
   }
 }
 
-/*# sourceMappingURL=style.css.map */
+.articles {
+  background-color: #fafafa;
+}
+
+.article__grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1.875rem;
+}
+
+@media (min-width: 40em) {
+  .article__grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 64em) {
+  .article__grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.article__item {
+  border-radius: 0.3125rem;
+  overflow: hidden;
+  background-color: white;
+  box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.15);
+  transition: all 150ms ease-in-out;
+}
+
+.article__item:hover {
+  transform: scale(1.05);
+}
+
+.article__image {
+  height: 12.5rem;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.article__text {
+  padding: 1.875rem 1.875rem 2.5rem 1.875rem;
+  color: #9698a6;
+}
+
+@media (min-width: 40em) {
+  .article__text {
+    padding: 1.875rem 1.5625rem;
+  }
+}
+
+.article__author {
+  font-size: 0.625rem;
+  margin-bottom: 0.75rem;
+}
+
+.article__title {
+  font-size: 1.0625rem;
+  line-height: 1.2;
+  color: #2d314d;
+  margin-bottom: 0.5rem;
+}
+
+.article__description {
+  font-size: 0.8125rem;
+}
