--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,19 @@
     <link rel="stylesheet" href="{% static '/css/style.css' %}" />
 </head>
 <body>
-<div style="width: 30%; float:left">
-    {% render_partial 'navigation' %}</div>
-    {% include "partial/header.html" %}
+{% include "partial/header.html" %}
+{% include "partial/hero.html" %}
+{#<div class="container-xxl my-md-4 bd-layout">#}
+
+    {% render_partial 'navigation' %}
+    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+
+    <div class="row">
         {% block content %}{% endblock %}
+    </div>
+
+    </main>
+{#</div>#}
     {% include "partial/footer.html" %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 <script src="{%  static 'js/script.js' %}"></script>
