--- a/documentsite/templates/home/home_page.html
+++ b/documentsite/templates/home/home_page.html
@@ -16,6 +16,7 @@
           <div class="article__author">By Claire Robinson</div>
           <div class="article__title">{{item.title}}</div>
           <div class="article__description">{{item.description}}</div>
+            <a href="/detailpage/{{ item.id }}" class="button hero__cta">Đọc sách</a>
         </div>
       </a>
 
