--- a/templates/partial/searchbar.html
+++ b/templates/partial/searchbar.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<section class="search">
+          <div class="search__group">
+    <div class="search__bar">
+        <input class="search__txt" type="text" name="" placeholder="Type to search">
+        <a href="" class="search__btn"></a>
+        <i class="fas fa-search"></i>
+    </div>
+    </div>
+{#        <div class="  search__group">#}
+{#    <a class="search__button">Javascript</a>#}
+{#    <a class="search__button">Javascript</a>#}
+{#    <a class="search__button">Javascript</a>#}
+{#    <a class="search__button">Javascript</a>#}
+{#</div>#}
+</section>
