--- a/static/css/_aside.scss
+++ b/static/css/_aside.scss
@@ -1,5 +1,7 @@
 .aside{
-  position: sticky;
-  top: 0;
-  width: 300px;
+border-style: solid;
+    border-width: 0 0 1px;
+    border-color: #e0e7f0;
+    transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;
+    padding: 0 40.5px;
 }
