--- a/static/css/style.css
+++ b/static/css/style.css
@@ -497,7 +497,7 @@ button:hover::before,
 
 .hero__image {
   position: relative;
-  background-image: url("/static/images/background.jpg");
+  background-image: url("/static/images/backgroundhero.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -532,9 +532,11 @@ button:hover::before,
 }
 
 .aside {
-  position: sticky;
-  top: 0;
-  width: 300px;
+  border-style: solid;
+  border-width: 0 0 1px;
+  border-color: #e0e7f0;
+  transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;
+  padding: 0 40.5px;
 }
 
 .articles {
@@ -604,4 +606,72 @@ button:hover::before,
 .article__description {
   font-size: 0.8125rem;
   margin-bottom: 0.75rem;
+}
+
+.login__box {
+  background: rgba(0, 0, 0, 0.85);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  width: 450px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 60px;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.login__title {
+  float: left;
+  font-size: 40px;
+  border-bottom: 6px solid #31d35c;
+  margin-bottom: 50px;
+  padding: 13px 0;
+  color: white;
+}
+
+.login .textbox {
+  width: 100%;
+  overflow: hidden;
+  font-size: 20px;
+  padding: 8px 0;
+  margin: 8px 0;
+  border-bottom: 1px solid #31d35c;
+}
+
+.login .textbox i {
+  width: 26px;
+  float: left;
+  text-align: center;
+}
+
+.login .textbox input {
+  border: none;
+  outline: none;
+  background: none;
+  color: white;
+  width: 100%;
+}
+
+.login .textbox ::placeholder {
+  color: #f3f4f6;
+  opacity: 1;
+  background: none;
+}
+
+.login__button {
+  width: 100%;
+  background: none;
+  border: #31d35c solid 2px;
+  padding: 12px;
+  font-size: 15px;
+  cursor: pointer;
+  margin: 10px;
+}
+
+.login__button:hover {
+  background: linear-gradient(to right, #31d35c, #2bb7da);
 }
