--- a/static/css/_aside.scss
+++ b/static/css/_aside.scss
@@ -1,7 +1,31 @@
 .aside{
-border-style: solid;
-    border-width: 0 0 1px;
-    border-color: #e0e7f0;
-    transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;
-    padding: 0 40.5px;
+    width: 90%;
+    height: 95%;
+    display: flex;
+    &__left{
+        width: 20%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        background:white;
+        &__nav{
+            display: flex;
+            flex-direction: column;
+            font-size:14px;
+            color: gray;
+            margin-top: 70px;
+            span{
+                margin-bottom: 15px;
+                letter-spacing: 2px;
+                .active{
+                    color: black;
+                }
+            }
+        }
+    }
+    &__content{
+         width: 90%;
+        display: flex;
+        flex-direction: column;
+    }
 }
