--- a/static/css/_login.scss
+++ b/static/css/_login.scss
@@ -31,16 +31,17 @@
           margin: 8px 0;
           border-bottom:  1px solid $limeGreen;
           i {
-          width: 26px;
-          float: left;
-          text-align: center;
+               width: 26px;
+               float: left;
+               text-align: center;
+               padding-right:20px ;
           }
           input {
                border: none;
                outline: none;
                background: none;
                color:$white;
-               width: 100%;
+               width: 85%;
           }
           ::placeholder{
                     color: $lightGrayishBlue;
@@ -59,5 +60,8 @@
           &:hover{
                background: linear-gradient(to right, $limeGreen, $brightCyan) ;
           }
+     }
+     &__sub{
+          margin-bottom: 0px ;
      }
 }
