--- a/static/css/style.css
+++ b/static/css/style.css
@@ -73,6 +73,10 @@ a:hover {
   text-decoration: none;
 }
 
+ul {
+  list-style-type: none;
+}
+
 .container {
   max-width: 69.375rem;
   margin: 0 auto;
@@ -532,11 +536,40 @@ button:hover::before,
 }
 
 .aside {
-  border-style: solid;
-  border-width: 0 0 1px;
-  border-color: #e0e7f0;
-  transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;
-  padding: 0 40.5px;
+  width: 90%;
+  height: 95%;
+  display: flex;
+}
+
+.aside__left {
+  width: 20%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background: white;
+}
+
+.aside__left__nav {
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  color: gray;
+  margin-top: 70px;
+}
+
+.aside__left__nav span {
+  margin-bottom: 15px;
+  letter-spacing: 2px;
+}
+
+.aside__left__nav span .active {
+  color: black;
+}
+
+.aside__content {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
 }
 
 .articles {
@@ -646,6 +679,7 @@ button:hover::before,
   width: 26px;
   float: left;
   text-align: center;
+  padding-right: 20px;
 }
 
 .login .textbox input {
@@ -653,7 +687,7 @@ button:hover::before,
   outline: none;
   background: none;
   color: white;
-  width: 100%;
+  width: 85%;
 }
 
 .login .textbox ::placeholder {
@@ -674,4 +708,140 @@ button:hover::before,
 
 .login__button:hover {
   background: linear-gradient(to right, #31d35c, #2bb7da);
+}
+
+.login__sub {
+  margin-bottom: 0px;
+}
+
+.sidebar {
+  height: 100%;
+  width: 240px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  background: #31d35c;
+  color: black;
+  overflow-y: auto;
+}
+
+.sidebar__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  padding: 0rem 1rem;
+}
+
+.sidebar__menu {
+  padding: 1rem;
+}
+
+.sidebar li {
+  margin-bottom: 1rem;
+}
+
+.sidebar a {
+  color: #fff;
+  font-size: 1rem;
+}
+
+.sidebar a span:last-child {
+  padding: 0.5rem;
+}
+
+.main {
+  margin-top: 60px;
+  background: whitesmoke;
+  padding: 1rem 3rem;
+  min-height: 90vh;
+  position: relative;
+  margin-left: 240px;
+}
+
+.input-field {
+  padding: 10px;
+  margin: 10px;
+}
+
+.input-field label {
+  width: 300px;
+  color: black;
+  margin-right: 15px;
+  font-size: 14px;
+}
+
+.input-field input, .input-field textarea {
+  width: 100%;
+  outline: none;
+  border: 1px solid #31d35c;
+  font-size: 15px;
+  padding: 8px 10px;
+  border-radius: 3px;
+  transition: all 0.3s ease;
+}
+
+.input-field textarea {
+  resize: none;
+  height: 125px;
+}
+
+.input-field select {
+  border: 1px solid #31d35c;
+  width: 100%;
+  height: 100%;
+  border-radius: 3px;
+  padding: 8px 10px;
+}
+
+.profile {
+  position: relative;
+  display: inline-block;
+}
+
+.profile__img {
+  margin-top: -20px;
+  width: 50px;
+  height: 50px;
+}
+
+.profile__dropdown {
+  position: absolute;
+}
+
+.profile__dropdown:hover .profile__dropdown__list {
+  z-index: 1000;
+  opacity: 1;
+  visibility: visible;
+}
+
+.profile__dropdown__select {
+  padding: 1.5rem;
+  border-radius: 4px;
+  background-color: white;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1.6rem;
+  cursor: pointer;
+}
+
+.profile__dropdown__list {
+  border-radius: 4px;
+  background-color: white;
+  top: 110%;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  visibility: hidden;
+  margin-top: 35px;
+  width: 200px;
+  transition: opacity 0.2s linear, visibility 0.2s linear;
+}
+
+.profile__dropdown__list__item {
+  padding: 1rem;
+  font-size: 1rem;
 }
