--- a/templates/admin.html
+++ b/templates/admin.html
@@ -8,14 +8,59 @@
     <title>Document</title>
     {% load static %}
     {% load render_partial %}
-    <script src="https://kit.fontawesome.com/1bb3f32b56.js" crossorigin="anonymous"></script>
-{#    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">#}
+{#    <script src="https://kit.fontawesome.com/1bb3f32b56.js" crossorigin="anonymous"></script>#}
+{#    <link href="https://cdn.jsdelivr.net/gh/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">#}
     <link rel="stylesheet" href="{% static '/css/style.css' %}" />
 </head>
-<body style="   background: url('/static/images/backgroundsearch.jpg') no-repeat ;
-     background-size: cover;
-     width: 100%;
-   ">
-        {% block content %}{% endblock %}
+<body >
+{% if request.user.is_authenticated %}
+      <div class="sidebar">
+        <div class="sidebar__header">
+            <h3 class="brand">
+                <span class="ti-unlink"></span>
+                <span>HEAD</span>
+            </h3>
+            <span class="ti-menu-alt"></span>
+        </div>
+        <div class="sidebar__menu">
+            <ul>
+                <li>
+                    <a href="/adminstrator">
+                        <i class="fas fa-home"></i>
+                        <span>Home</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/topic/index">
+                        <i class="fas fa-sign-out-alt"></i>
+                        <span>Topic</span>
+                    </a>
+                </li><li>
+                    <a href="/document/index">
+                        <i class="fas fa-book"></i>
+                        <span>Document</span>
+                    </a>
+                </li><li>
+                    <a href="/topicdocument/index">
+                        <i class="fas fa-tags"></i>
+                        <span>Tags</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/logout">
+                        <i class="fas fa-sign-out-alt"></i>
+                        <span>Log Out</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="main">
+    {% endif %}
+         {% block content %}{% endblock %}
+{% if request.user.is_authenticated %}
+    </div>
+    {% endif %}
 </body>
 </html>
