--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,14 +1,21 @@
 {% extends 'admin.html' %}
 {% block content %}
+    <div style="   background: url('/static/images/backgroundsearch.jpg') no-repeat ;
+     background-size: cover;
+     width: 100%;
+     height: 100vh;
+   ">
     <form method="post" class="login">
     <div class="login__box">
     {% csrf_token %}
         <h1 class="login__title">Login</h1>
         <div class="textbox">
+            <i class="fas fa-user"></i>
             <input type="text" placeholder="Username" name="username">
         </div>
 
         <div class="textbox">
+            <i class="fas fa-lock"></i>
             <input type="password" placeholder="Password" name="password">
         </div>
 {#    {{ form}}#}
@@ -16,4 +23,5 @@
     <p>Chưa có tài khoản? Tạo tài khoản <a href="/register">ở đây</a></p>
         </div>
     </form>
+    </div>
 {% endblock %}
