--- a/templates/registration/signin.html
+++ b/templates/registration/signin.html
@@ -1,26 +1,33 @@
-{% extends "admin.html" %}
-
-
+{% extends 'admin.html' %}
 
 {% block content %}
-    <form method="post" class="login">
+      <div style="   background: url('/static/images/backgroundsearch.jpg') no-repeat ;
+     background-size: cover;
+     width: 100%;
+     height: 100vh;
+   ">
+    <form method="post" class="login"   >
         <div class="login__box">
-
-          <h1 class="login__title">Đăng kí</h1>
+            <h1 class="login__title">Đăng kí</h1>
     {% csrf_token %}
     {% for mess in messages %}
         <p>{{ mess }}</p>
     {% endfor %}
-      <div class="textbox"><label for="id_email">Email:</label> <input type="email" name="email" maxlength="300" required="" id="id_email"></div>
-<div class="textbox"><label for="id_phonenumber">Tel:</label> <input type="tel" name="phonenumber" maxlength="15" required="" id="id_phonenumber"></div>
+      <div class="textbox">
+          <label for="id_email">Email:</label>
+          <input type="email" name="email" maxlength="300" required="" id="id_email"/>
+      </div>
+<div class="textbox">
+    <label for="id_phonenumber">Tel:</label>
+    <input type="tel" name="phonenumber" maxlength="15" required="" id="id_phonenumber"/>
+</div>
 <div class="textbox"><label for="id_fullname">Fullname:</label> <input type="text" name="fullname" maxlength="300" required="" id="id_fullname"></div>
 <div class="textbox"><label for="id_avatar">Avatar:</label> <input type="file" name="avatar" accept="image/*" id="id_avatar"></div>
 <div class="textbox"><label for="id_dob">Dob:</label> <input type="date" name="dob" id="id_dob"  required pattern="dd/mm/yyyy"></div>
 <div class="textbox"><label for="id_password">Password:</label> <input type="password" name="password" maxlength="300" required="" id="id_password"></div>
-
-
-    <button type="submit" class="button">Đăng ký</button>
-    <p>Đã có tài khoản? Đặng nhập<a href="/login"> ở đây</a></p>
+<button type="submit" class="button">Đăng ký</button>
+    <p class="login__sub">Đã có tài khoản? Đặng nhập<a href="/login"> ở đây</a></p>
         </div>
     </form>
+      </div>
 {% endblock %}
