--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,6 @@
 {% extends 'admin.html' %}
 {% block content %}
+
     <div style="   background: url('/static/images/backgroundsearch.jpg') no-repeat ;
      background-size: cover;
      width: 100%;
@@ -18,6 +19,13 @@
             <i class="fas fa-lock"></i>
             <input type="password" placeholder="Password" name="password">
         </div>
+         {% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
 {#    {{ form}}#}
     <button type="submit" class="login__button">Login</button>
     <p>Chưa có tài khoản? Tạo tài khoản <a href="/register">ở đây</a></p>
